--- a/cart.html
+++ b/cart.html
@@ -24,67 +24,33 @@
   <h1 class="text-2xl font-bold mb-4 text-gray-700">Your Cart</h1>
   <div id="cart-items" class="space-y-4"></div>
 
-  <div class="mt-6 flex flex-col items-end space-y-4 w-full">
-
-    <!-- Cart total -->
+  <div class="mt-6 flex flex-col items-end space-y-4">
     <div id="cart-total" class="text-lg font-bold text-gray-700">Total: $0.00</div>
     
-    <!-- Existing Stripe Checkout button -->
+    <!-- Stripe Checkout button -->
     <button id="checkout-btn" class="px-6 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-500 w-full sm:w-auto">
       Checkout
     </button>
 
-    <!-- Payment selection -->
-    <div class="mt-4 w-full">
-      <h2 class="font-bold mb-2 text-gray-700">Select Payment Method</h2>
-      <div class="flex flex-col space-y-3">
-
-        <!-- Stripe options: Visa, MasterCard, AmEx, Discover -->
-        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
-          <input type="radio" name="payment" value="stripe" class="form-radio h-5 w-5">
-          <div class="flex space-x-2 items-center">
-            <img src="https://img.icons8.com/color/48/visa.png" class="h-8" alt="Visa">
-            <img src="https://img.icons8.com/color/48/mastercard-logo.png" class="h-8" alt="MasterCard">
-            <img src="https://img.icons8.com/color/48/amex.png" class="h-8" alt="AmEx">
-            <img src="https://img.icons8.com/color/48/discover.png" class="h-8" alt="Discover">
-          </div>
-        </label>
-
-        <!-- Google Pay -->
-        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
-          <input type="radio" name="payment" value="googlepay" class="form-radio h-5 w-5">
-          <img src="https://img.icons8.com/color/48/google-pay.png" class="h-8" alt="Google Pay">
-        </label>
-
-        <!-- Apple Pay -->
-        <label class="flex items-center space-x-2 bg-white p-2 rounded shadow cursor-pointer">
-          <input type="radio" name="payment" value="applepay" class="form-radio h-5 w-5">
-          <img src="https://www.svgrepo.com/show/303191/apple-pay-logo.svg" class="h-8" alt="Apple Pay">
-        </label>
-
-        <!-- PayPal buttons -->
-        <div id="paypal-buttons" class="flex flex-col space-y-2 mt-2">
-          <div id="paypal-standard"></div>
-          <div id="paypal-later"></div>
-          <div id="paypal-debit"></div>
-        </div>
-      </div>
-
-      <!-- Proceed Button for Stripe/Google/Apple Pay -->
-      <button id="proceed-btn" class="mt-4 w-full bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-500">
-        Proceed to Checkout
-      </button>
+    <!-- Payment icons row -->
+    <div class="flex flex-wrap justify-center items-center space-x-4 mt-2">
+      <img src="https://img.icons8.com/color/48/visa.png" alt="Visa" class="h-8">
+      <img src="https://img.icons8.com/color/48/mastercard-logo.png" alt="MasterCard" class="h-8">
+      <img src="https://img.icons8.com/color/48/google-pay.png" alt="Google Pay" class="h-8">
+      <img src="https://www.svgrepo.com/show/303191/apple-pay-logo.svg" alt="Apple Pay" class="h-8">
     </div>
+
+    <!-- PayPal button -->
+    <div id="paypal-button-container" class="w-full sm:w-auto mt-4"></div>
   </div>
 </main>
 
-<!-- Optional footer -->
 <footer class="bg-gradient-to-r from-green-100 to-blue-100 py-6 text-center text-gray-700">
   © 2025 DjsDopeDesigns — All Rights Reserved
 </footer>
 
-<!-- ✅ PayPal SDK -->
-<script src="https://www.paypal.com/sdk/js?client-id=AV2RLwC3CjrbZ8hAPzkf1e1IRiZnZFBUnBGyn2CJRkdqipI7oa_1lCI531VgBT9BHBW5D4PCOLOreBh8&currency=USD&components=buttons,funding-eligibility"></script>
+<!-- PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=AV2RLwC3CjrbZ8hAPzkf1e1IRiZnZFBUnBGyn2CJRkdqipI7oa_1lCI531VgBT9BHBW5D4PCOLOreBh8&currency=USD"></script>
 
 <script>
 // Load cart from localStorage
@@ -119,22 +85,29 @@ function renderCartItems() {
   document.getElementById("cart-total").textContent = `Total: $${total.toFixed(2)}`;
   document.getElementById("cart-count").textContent = cart.reduce((sum, i) => sum + i.quantity, 0);
   localStorage.setItem("cart", JSON.stringify(cart));
+
   window.cartTotal = total.toFixed(2);
 }
 
-// Cart manipulation functions
+// Cart functions
 function increaseQuantity(index){
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   cart[index].quantity++;
   localStorage.setItem("cart", JSON.stringify(cart));
   renderCartItems();
 }
+
 function decreaseQuantity(index){
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart[index].quantity > 1){ cart[index].quantity--; } else { cart.splice(index,1); }
+  if(cart[index].quantity > 1){
+    cart[index].quantity--;
+  } else {
+    cart.splice(index,1);
+  }
   localStorage.setItem("cart", JSON.stringify(cart));
   renderCartItems();
 }
+
 function removeItem(index){
   let cart = JSON.parse(localStorage.getItem("cart")) || [];
   cart.splice(index,1);
@@ -145,52 +118,45 @@ function removeItem(index){
 // Initial render
 renderCartItems();
 
-// Stripe/Google/Apple Pay Proceed button
-document.getElementById("proceed-btn").addEventListener("click", async () => {
-  const selected = document.querySelector('input[name="payment"]:checked');
-  if(!selected){ alert("Please select a payment method!"); return; }
-
-  const cart = JSON.parse(localStorage.getItem("cart")) || [];
-  if(cart.length === 0){ alert("Your cart is empty!"); return; }
-
+// Stripe checkout
+document.getElementById("checkout-btn").addEventListener("click", async () => {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  if(cart.length === 0){
+    alert("Your cart is empty!");
+    return;
+  }
   try {
-    let url = "";
-    if(selected.value === "stripe" || selected.value === "googlepay" || selected.value === "applepay"){
-      const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ items: cart })
-      });
-      const data = await res.json();
-      if(data.url) url = data.url;
-    }
-    if(url) window.location.href = url;
+    const res = await fetch("https://djsdope.onrender.com/create-checkout-session", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ items: cart })
+    });
+    const data = await res.json();
+    if(data.url) window.location.href = data.url;
   } catch(err){
     console.error("Checkout error:", err);
     alert("Failed to start checkout. Try again.");
   }
 });
 
-// ✅ PayPal buttons
+// PayPal button (no duplicates)
 paypal.Buttons({
   style: { layout: 'vertical', color: 'gold', shape: 'rect', label: 'paypal' },
-  createOrder: (data, actions) => actions.order.create({ purchase_units: [{ amount: { value: window.cartTotal || "0.00" } }] }),
-  onApprove: (data, actions) => actions.order.capture().then(() => { localStorage.removeItem("cart"); window.location.href="thankyou.html"; })
-}).render('#paypal-standard');
-
-paypal.Buttons({
-  fundingSource: paypal.FUNDING.PAYLATER,
-  createOrder: (data, actions) => actions.order.create({ purchase_units: [{ amount: { value: window.cartTotal || "0.00" } }] }),
-  onApprove: (data, actions) => actions.order.capture().then(() => { localStorage.removeItem("cart"); window.location.href="thankyou.html"; })
-}).render('#paypal-later');
-
-paypal.Buttons({
-  fundingSource: paypal.FUNDING.CARD,
-  createOrder: (data, actions) => actions.order.create({ purchase_units: [{ amount: { value: window.cartTotal || "0.00" } }] }),
-  onApprove: (data, actions) => actions.order.capture().then(() => { localStorage.removeItem("cart"); window.location.href="thankyou.html"; })
-}).render('#paypal-debit');
+  funding: { disallowed: [ paypal.FUNDING.CREDIT, paypal.FUNDING.PAYLATER ] }, // remove extra buttons
+  createOrder: function(data, actions) {
+    return actions.order.create({
+      purchase_units: [{ amount: { value: window.cartTotal || "0.00" } }]
+    });
+  },
+  onApprove: function(data, actions) {
+    return actions.order.capture().then(function(details) {
+      alert("Transaction completed by " + details.payer.name.given_name + " ✅");
+      localStorage.removeItem("cart");
+      window.location.href = "thankyou.html";
+    });
+  }
+}).render("#paypal-button-container");
 
 </script>
-
 </body>
 </html>
